new swagger json and bugfixses
